# RO-Crate

./: .gitignore  CLUSTER.md  README.md  flake.nix  pyproject.toml  work_log.md
ROcrate-validation/: ROcrate-validation.ipynb
SURF_main/: SURF_example.ipynb  config.yaml  generate_rocrate.py
SURF_main/crate/: ro-crate-metadata.json  stats.txt
benchmark8/: #benchmark8a.py#  .#benchmark8a.py  README.md  params8a.yaml  pyproject.toml  submit.sh  view-data.ipynb
benchmark8/data/: stats.txt.save
example/: build_rocrate.py  test-rocrate.ipynb
example/.ipynb_checkpoints/: build_rocrate-checkpoint.py  test-rocrate-checkpoint.ipynb
example/exp_crate1/: ro-crate-metadata.json
example/exp_crate1/.ipynb_checkpoints/: ro-crate-metadata-checkpoint.json
example2/: test-rocrate-2.ipynb
example2/.ipynb_checkpoints/: test-rocrate-2-checkpoint.ipynb
example2/crate/: ro-crate-metadata.json  ro-crate-preview.html
example2/sample_data/: data.csv  datapackage.json
example2/sample_data/.ipynb_checkpoints/: data-checkpoint.csv  datapackage-checkpoint.json  schema-checkpoint.json
example3/: rocrate_schema.json  schema.json  test-rocrate-3.ipynb
example3/.ipynb_checkpoints/: test-rocrate-3-checkpoint.ipynb
example3/crate/: ro-crate-metadata.json  ro-crate-preview.html
test_runs/benchmark8/: params8a.yaml  view-data.ipynb
workflow_run_rocrate_examples/process_run_crate/: test-rocrate.ipynb
workflow_run_rocrate_examples/provenance_run_crate/: params.yml  try_grp.py
workflow_run_rocrate_examples/workflow_run_crate/: head_tail.sh
(+6 files in other folders)
