[tool.poetry]
name = "benchmark8"
version = "0.1.0"
description = ""
authors = ["Daniel Wheeler <daniel.wheeler2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fipy = "^3.4.4"
rocrate = "^0.10.0"
numpy = "1.26.4"
setuptools = "^70.1.0"
notebook = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
